# cookiecutter-sveetch-djangoapp

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.rst  Makefile  README.rst  check-all-variant.sh  cookiecutter.json  tox.ini
docs/: conf.py  cookie-options.rst  index.rst  makefile_parser.py  sphinx_reload.py  usage.rst
docs/_static/: makefile_help.rst
docs/features/: api.rst  cms.rst  django.rst  frontend.rst  makefile.rst  package-release.rst  quality.rst
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: base.txt  dev.txt  docs-live.txt  docs.txt
{{cookiecutter.package_name}}/: CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  cookiebaked.json  freezer.py  setup.cfg  sphinx_reload.py
{{cookiecutter.package_name}}/docs/: conf.py  development.rst  django_settings.py  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
{{cookiecutter.package_name}}/docs/django_app/: index.rst  models.rst  serializers.rst  viewsets.rst
{{cookiecutter.package_name}}/docs/references/: factories.rst  index.rst  models.rst  plugins.rst  serializers.rst  views.rst  viewsets.rst
{{cookiecutter.package_name}}/frontend/: .stylelintignore  .stylelintrc.json  package.json  webpack.config.js
{{cookiecutter.package_name}}/frontend/js/: main.js
{{cookiecutter.package_name}}/frontend/scss/: main.scss
{{cookiecutter.package_name}}/frontend/scss/settings/: _bootstrap.scss  _colors.scss  _icons.scss  _site.scss
{{cookiecutter.package_name}}/sandbox/: urls.py
{{cookiecutter.package_name}}/sandbox/settings/: base.py  demo.py  tests.py
{{cookiecutter.package_name}}/sandbox/templates/: skeleton.html
{{cookiecutter.package_name}}/sandbox/templates/menus/: flat.html
{{cookiecutter.package_name}}/sandbox/templates/pages/: default.html  test.html
{{cookiecutter.package_name}}/tests/: conftest.py  utils.py
{{cookiecutter.package_name}}/tests/010_models/: 011_blog.py  012_article.py
{{cookiecutter.package_name}}/tests/020_factories/: 021_blog.py  022_article.py
{{cookiecutter.package_name}}/tests/030_views/: 031_blog.py  032_article.py
{{cookiecutter.package_name}}/tests/100_serializers/: 101_blog.py  102_article.py
{{cookiecutter.package_name}}/tests/110_viewsets/: 111_blog.py  112_article.py
{{cookiecutter.package_name}}/tests/200_plugins/: 0201_blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/: __init__.py  apps.py  cms_plugins.py  exceptions.py  routers.py  settings.py  urls.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/admin/: __init__.py  article.py  blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/factories/: __init__.py  article.py  blog.py  cms.py  user.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/forms/: __init__.py  blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/models/: __init__.py  article.py  blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/plugins/: blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/serializers/: __init__.py  article.py  blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/templates/{{cookiecutter.app_name}}/: article_detail.html  base.html  blog_detail.html  blog_index.html  blog_plugin.html  pagination.html
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/utils/: cms_tests.py  tests.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/views/: __init__.py  article.py  blog.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/viewsets/: __init__.py  article.py  blog.py  mixins.py
