;;
;; {{ cookiecutter.project_name }} package
;;
[metadata]
name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
project_urls =
    Source Code = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
    Issue Tracker = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}/issues
    Changelog = https://{{ cookiecutter.package_name }}.readthedocs.io/en/latest/history.html
    Documentation = https://{{ cookiecutter.package_name }}.readthedocs.io/
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1

[options]
include_package_data = True
install_requires =
    Django>=3.2,<4.2{% if cookiecutter.include_api|lower == 'true' %}
    djangorestframework>=3.14.0{% endif %}
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
quality =
    flake8
    tox
doc =
    sphinx
    furo==2023.7.26
    sphinx-copybutton==0.5.2
doc-live =
    livereload
release =
    twine

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38,310}-django{32,41}{% if cookiecutter.include_api|lower == 'true' %}-api{% endif %}

[testenv]

deps =
    django32: Django>=3.2,<4.0
    django41: Django>=4.1,<4.2{% if cookiecutter.include_api|lower == 'true' %}
    django32-api: djangorestframework>=3.13.1
    django41-api: djangorestframework>=3.14.0{% endif %}

commands =
    pip install -e .[dev]
    pytest -vv tests
